# render-modules

./: .gitignore  CMakeLists.txt  README.md  plugin-template.pcf.plugin  render-modules.pcf.plugin
cmake/: CopyConfig.cmake  FindPolymorphEngine.cmake
core/include/: ICamera.hpp  ICursor.hpp  IDrawer.hpp  IFont.hpp  IMusic.hpp  ISound.hpp  IText.hpp  ITexture.hpp  IWindow.hpp  PluginCore.hpp
core/src/: PluginCore.cpp
factory/include/: ComponentFactory.hpp  ObjectFactory.hpp  ScriptFactory.hpp  SerializableObjectFactory.hpp
factory/src/: ComponentFactory.cpp  ObjectFactory.cpp  ScriptFactory.cpp  SerializableObjectFactory.cpp
includeExport/polymorph/engine/: render-modules.hpp
includeExport/polymorph/engine/plugin-template/: plugin-template.hpp
